Footer z-index fix

--- a/client/store/AddListing/AddListing.scss
+++ b/client/store/AddListing/AddListing.scss
@@ -6,6 +6,7 @@ $step-width: 5px;
 
 .footer {
     position: fixed;
+    z-index: 9999;
     color: #fff;
     bottom: 0;
     width: 100%;
